# Efficient-Compression-Tool

./: .gitignore  .gitmodules  .pre-commit-hooks.yaml  Building.txt  Dockerfile  Manual.docx  Performance.html  Performance.xlsx  README.md
.github/workflows/: build binaries.yml  mac-xcode.yml  mac.yml  ubuntu.yml  windows-msvc.yml  windows-msys2.yml
Efficient Compression Tool Kopie.xcodeproj/: project.pbxproj
Efficient Compression Tool.xcodeproj/: project.pbxproj
Efficient Compression Tool.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Efficient Compression Tool.xcodeproj/project.xcworkspace/xcuserdata/felixhanau.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
Efficient Compression Tool.xcodeproj/xcuserdata/felixhanau.xcuserdatad/xcschemes/: Efficient Compression Tool.xcscheme  xcschememanagement.plist
doc/: Building.txt  Manual.docx
licenses/: LICENSE.txt  Licenses.txt
src/: CMakeLists.txt  LzFind.c  LzFind.h  Makefile  ect.manifest  ect.manifest.rc  gztools.cpp  gztools.h  jpegtran.cpp  main.cpp  main.h  pngusr.h  support.cpp  support.h  threadLocal.h  zlibWrapper.cpp  zlibWrapper.h  zopflipng.cpp
src/leanify/: CMakeLists.txt  fileio.h  leanify.cpp  zip.cpp  zip.h
src/libpng/: pnglibconf.h
src/lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h  lodepng_util.cpp  lodepng_util.h
src/miniz/: CMakeLists.txt  miniz.c  miniz.cpp  miniz.h
src/mozjpeg/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  jchuff.c  jchuff.h  jcphuff.c  jmorecfg.h  transupp.h
src/mozjpeg/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/mozjpeg/java/: Makefile.in
src/mozjpeg/md5/: Makefile.in
src/mozjpeg/simd/: Makefile.in
src/optipng/: CMakeLists.txt  codec.c  codec.cpp  codec.h  image.c  image.h  integer.h  opngcore.h  opngtrans.h  optipng.cpp  trans.c  trans.h
src/optipng/cexcept/: cexcept.h
src/optipng/opngreduc/: opngreduc.c  opngreduc.h
src/zlib/: CMakeLists.txt  adler32.c  crc32.c  crc32.h  deflate.c  deflate.h  gzguts.h  gzlib.c  gzread.c  inffast.c  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  trees.h  zconf.h  zlib.h  zutil.c  zutil.h
src/zopfli/: CMakeLists.txt  CONTRIBUTORS  LzFind.c  LzFind.h  Makefile  blocksplitter.c  blocksplitter.h  cache.c  cache.h  deflate.c  deflate.cpp  deflate.h  disttable.h  hash.c  hash.h  katajainen.c  katajainen.cpp  katajainen.h  lz77.c  lz77.h  match.h  squeeze.c  squeeze.h  tree.c  tree.h  util.c  util.h  zlib_container.c  zopfli.h  zopfli_gzip.cpp
src/zopfli/src/zopfli/: blocksplitter.c  blocksplitter.h  cache.c  cache.h  deflate.c  deflate.h  hash.c  hash.h  katajainen.c  katajainen.h  lz77.c  lz77.h  squeeze.c  squeeze.h  tree.c  tree.h  util.c  util.h  zlib_container.c  zopfli.h  zopfli_gzip.cpp
src/zopfli/src/zopflipng/: zopflipng.cpp  zopflipng_bin.cc  zopflipng_lib.cc  zopflipng_lib.h
src/zopfli/src/zopflipng/lodepng/: lodepng.cpp  lodepng.h  lodepng_util.cpp  lodepng_util.h
